objects/Cost_Note_Reminder__c.object
<CustomObject>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Note__c</fullName>
        <label>Kostennote</label>
        <referenceTo>Cost_Note__c</referenceTo>
        <relationshipLabel>Mahnungen</relationshipLabel>
        <relationshipName>Cost_Note_Reminders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c+Payment_Term__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c+Payment_Term__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c+Payment_Term__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fälligkeitsdatum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAHNKOSTImpID__c</fullName>
        <externalId>true</externalId>
        <label>MAHNKOSTImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Mahnung_ID__c</fullName>
        <label>Old Mahnung ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Cost_Note__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Zahlungsfrist</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Empfänger</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cost_Note_Recipients</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reminder_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wiedervorlage_erstellen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wiedervorlage erstellen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>customerCostNoteReminderExisting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>customerCostNoteReminderExisting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>insuranceCostNoteReminderExisting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>insuranceCostNoteReminderExisting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kreditinstitut__c</fullName>
        <formula>Cost_Note__r.Claim__r.Opportunity__r.Bank__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kreditinstitut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Versicherung__c</fullName>
        <formula>Cost_Note__r.Claim__r.Opportunity__r.Insurance__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Versicherung</label>
        <type>Text</type>
    </fields>
    <label>Mahnung</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mahnungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost_Note__c</columns>
        <columns>Number__c</columns>
        <columns>Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Recipient__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Cost_Note_Reminders</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Number__c</columns>
        <columns>Recipient__c</columns>
        <columns>Cost_Note__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>Today</value>
        </filters>
        <label>Überfällige Mahnungen</label>
    </listViews>
    <listViews>
        <fullName>Unsend_Cost_Note_Reminders</fullName>
        <columns>NAME</columns>
        <columns>Cost_Note__c</columns>
        <columns>Date__c</columns>
        <columns>Recipient__c</columns>
        <columns>Number__c</columns>
        <columns>Stage__c</columns>
        <columns>Payment_Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft,Canceled</value>
        </filters>
        <label>Unversendete Mahnungen</label>
    </listViews>
</CustomObject>